# game-emu

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  uninstall.cmake
.github/workflows/: build.yml  codeql-analysis.yml  game-emu.yml
game-emu-cli/: CMakeLists.txt
game-emu-cli/src/: main.cpp
game-emu-common/: CMakeLists.txt
game-emu-common/include/game-emu/common/: core.h  coreinstance.h  coreloader.h  corestate.h  endianutils.h  instructionbasedcoreinstance.h  instructiondecoder.h  instructionstream.h  logger.h  physicaladdresstranslator.h  physicalmemorymap.h  propertyvalue.h  register.h  runloop.h  runstate.h  stdcommon.h  util.h
game-emu-common/src/: binarytreememorymap.cpp  core.cpp  coreinstance.cpp  coreloader.cpp  instructionbasedcoreinstance.cpp  runloop.cpp  util.cpp
gameemu-cli/: CMakeLists.txt
gameemu-cli/src/: main.cpp
gameemu-common/: CMakeLists.txt
gameemu-common/include/game-emu/common/: core.h  coreinstance.h  coreloader.h  corestate.h  instructionbasedcoreinstance.h  instructiondecoder.h  instructionstream.h  logger.h  loggermanager.h  physicalmemorymap.h  propertyvalue.h  register.h  runloop.h  runstate.h  stdcommon.h  symbolhelper.h  util.h
gameemu-common/src/: binarytreememorymap.cpp  core.cpp  coreinstance.cpp  coreloader.cpp  instructionbasedcoreinstance.cpp  physicalmemorymap.cpp  runloop.cpp  util.cpp
gameemu-core-gb/: CMakeLists.txt
gameemu-core-gb/include/game-emu/cores/system/: gb.h
gameemu-core-gb/src/: gameemu_interface.cpp  gb.cpp
gameemu-core-gbz80/: CMakeLists.txt  core_gbz80.cpp  core_gbz80.h  gameemu_interface.cpp
gameemu-core-gbz80/include/game-emu/cores/processor/: gbz80.h
gameemu-core-gbz80/src/: gameemu_interface.cpp  gbz80.cpp  interpreter.cpp
gameemu-core-sm83/: CMakeLists.txt
gameemu-core-sm83/include/game-emu/cores/processor/: sm83.h
gameemu-core-sm83/src/: gameemu_interface.cpp  interpreter.cpp  sm83.cpp
libgame-emu-common/: CMakeLists.txt
libgame-emu-common/include/: core.h
libgame-emu-common/include/game-emu/common/: core.h  coreinstance.h  coreloader.h  corestate.h  endianutils.h  instructionbasedcoreinstance.h  instructiondecoder.h  instructionstream.h  propertyvalue.h  register.h  runloop.h  stdcommon.h  symbolhelper.h  util.h
libgame-emu-common/include/game-emu/common/cpu/: cpu.h  instructiondecoder.h  instructionstream.h
libgame-emu-common/src/: core.cpp  coreinstance.cpp  coreloader.cpp  runloop.cpp  util.cpp
libgame-emu-common/src/cpu/: cpu.cpp
