cmake_minimum_required (VERSION 3.8)

project ("game-emu")

set(CMAKE_CXX_STANDARD 20)

if(NOT (${CMAKE_SYSTEM_NAME} STREQUAL "Windows" OR ${CMAKE_SYSTEM_NAME} STREQUAL "Linux"))
	message(FATAL_ERROR "Unsupported Platform")
endif()

if(MSVC)
    add_compile_options("$<$<CONFIG:RELEASE>:/O2>")
else()
    add_compile_options("-Wall" "-Wextra" "$<$<CONFIG:RELEASE>:-O3>")
endif()

set(LLVM_BUILD_STATIC ON CACHE INTERNAL "" FORCE)

set(LLVM_OPTIMIZED_TABLEGEN ON CACHE INTERNAL "" FORCE)

set(LLVM_BUILD_LLVM_C_DYLIB OFF CACHE INTERNAL "" FORCE)
set(LLVM_LINK_LLVM_DYLIB OFF CACHE INTERNAL "" FORCE)

set(LLVM_BUILD_TESTS OFF CACHE INTERNAL "" FORCE)
set(LLVM_INCLUDE_TESTS OFF CACHE INTERNAL "" FORCE)

set(LLVM_INCLUDE_TOOLS OFF CACHE INTERNAL "" FORCE)
set(LLVM_BUILD_TOOLS OFF CACHE INTERNAL "" FORCE)

set(LLVM_INCLUDE_UTILS OFF CACHE INTERNAL "" FORCE)
set(LLVM_BUILD_UTILS OFF CACHE INTERNAL "" FORCE)

set(LLVM_INCLUDE_RUNTIMES OFF CACHE INTERNAL "" FORCE)
set(LLVM_BUILD_RUNTIMES OFF CACHE INTERNAL "" FORCE)

set(LLVM_ENABLE_BINDINGS OFF CACHE INTERNAL "" FORCE)
set(LLVM_ENABLE_OCAMLDOC OFF CACHE INTERNAL "" FORCE)
set(LLVM_INCLUDE_BENCHMARKS OFF CACHE INTERNAL "" FORCE)
set(LLVM_INCLUDE_EXAMPLES OFF CACHE INTERNAL "" FORCE)
set(LLVM_TARGETS_TO_BUILD "host" CACHE INTERNAL "" FORCE)

add_subdirectory ("llvm-project/llvm" EXCLUDE_FROM_ALL)

add_subdirectory ("dynalo" EXCLUDE_FROM_ALL)

set(ARGS_BUILD_EXAMPLE OFF)
set(ARGS_BUILD_UNITTESTS OFF)

add_subdirectory ("args" EXCLUDE_FROM_ALL)
add_subdirectory ("cli" EXCLUDE_FROM_ALL)
add_subdirectory ("fmt" EXCLUDE_FROM_ALL)

add_subdirectory ("game-emu-common")
add_subdirectory ("game-emu-cli")

add_subdirectory ("gameemu-core-gbz80")
add_subdirectory ("gameemu-core-gb")
